# fars

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/: 01-paper-knowledge-layer-foundation-SUMMARY.md  01-paper-knowledge-layer-foundation-VERIFICATION.md
.planning/phases/01-foundation-api-scaffold/: 01-01-PLAN.md  01-CONTEXT.md
.planning/phases/01-paper-knowledge-layer-foundation/: 01-01-PLAN.md  01-CONTEXT.md
alembic/: env.py
alembic/versions/: 20260408_0001_initial_schema.py
docs/: 2026-04-08-fars-handoff.md  2026-04-08-requirements-design-implementation.md  2026-04-09-fars-unified-overview.md  executable-plan.md  project-index.md  repo-reading-notes.md
scripts/: continue_autonomous_research_loop.py  db_current.py  db_upgrade.py  export_openapi.py  run_autonomous_research_loop.py  run_batch_research_loop.py  run_local_e2e_flow.py
src/fars/: __init__.py  compat.py  config.py  dependencies.py  main.py  models.py  repository.py
src/fars/api/: __init__.py  main.py  schemas.py
src/fars_kg/: __init__.py  config.py  db.py  migrations.py  models.py  schemas.py  worktree.py
src/fars_kg/api/: app.py  (+3 more)
tests/: test_api.py  test_api_endpoints.py  test_domain_models.py  test_e2e_flow.py  test_health.py  test_migrations.py  test_namespace_contract.py  test_normalize.py  test_openapi_export.py  test_parser_contracts.py  test_product_files.py  test_repository.py  test_topic.py  test_worktree_manager.py
(+41 files in other folders)
